--- a/ios/Podfile
+++ b/ios/Podfile
@@ -17,6 +17,9 @@ end
 target 'skillcart' do
   config = use_native_modules!
 
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+  pod 'react-native-safe-area-context', :path => '../node_modules/react-native-safe-area-context'
+
   use_react_native!(
     :path => config[:reactNativePath],
     # An absolute path to your application root.
