--- a/package.json
+++ b/package.json
@@ -10,10 +10,29 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native/new-app-screen": "0.81.1",
+    "@react-navigation/bottom-tabs": "^7.4.6",
+    "@react-navigation/elements": "^2.6.3",
+    "@react-navigation/native": "^7.1.17",
+    "@react-navigation/native-stack": "^7.3.25",
+    "@reduxjs/toolkit": "^2.8.2",
+    "axios": "^1.11.0",
+    "lottie-ios": "4.5.0",
+    "lottie-react-native": "^7.3.2",
     "react": "19.1.0",
     "react-native": "0.81.1",
-    "@react-native/new-app-screen": "0.81.1",
-    "react-native-safe-area-context": "^5.5.2"
+    "react-native-error-boundary": "^2.0.0",
+    "react-native-fast-image": "^8.6.3",
+    "react-native-reanimated": "3.19.1",
+    "react-native-safe-area-context": "^5.6.1",
+    "react-native-screens": "^4.15.3",
+    "react-native-size-matters": "^0.4.2",
+    "react-native-skeleton-placeholder": "^5.2.4",
+    "react-native-vector-icons": "^10.3.0",
+    "react-redux": "^9.2.0",
+    "redux": "^5.0.1",
+    "redux-saga": "^1.3.0",
+    "styled-components": "^6.1.19"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
