--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android",
+    "build-web": "react-scripts build",
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "web": "react-scripts start"
   },
   "dependencies": {
     "@react-native/new-app-screen": "0.81.1",
@@ -20,6 +22,7 @@
     "lottie-ios": "4.5.0",
     "lottie-react-native": "^7.3.2",
     "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-native": "0.81.1",
     "react-native-error-boundary": "^2.0.0",
     "react-native-fast-image": "^8.6.3",
@@ -29,7 +32,9 @@
     "react-native-size-matters": "^0.4.2",
     "react-native-skeleton-placeholder": "^5.2.4",
     "react-native-vector-icons": "^10.3.0",
+    "react-native-web": "^0.21.1",
     "react-redux": "^9.2.0",
+    "react-scripts": "^5.0.1",
     "redux": "^5.0.1",
     "redux-saga": "^1.3.0",
     "styled-components": "^6.1.19"
@@ -56,5 +61,17 @@
   },
   "engines": {
     "node": ">=20"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
