--- a/package.json
+++ b/package.json
@@ -12,13 +12,18 @@
     "web": "react-scripts start"
   },
   "dependencies": {
+    "@react-native-vector-icons/material-design-icons": "^12.3.0",
+    "@react-native-vector-icons/material-icons": "^12.3.0",
+    "@react-native-vector-icons/octicons": "^20.3.0",
     "@react-native/new-app-screen": "0.81.1",
     "@react-navigation/bottom-tabs": "^7.4.6",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.25",
     "@reduxjs/toolkit": "^2.8.2",
+    "add": "^2.0.6",
     "axios": "^1.11.0",
+    "babel-plugin-module-resolver": "^5.0.2",
     "lottie-ios": "4.5.0",
     "lottie-react-native": "^7.3.2",
     "react": "19.1.0",
@@ -37,7 +42,8 @@
     "react-scripts": "^5.0.1",
     "redux": "^5.0.1",
     "redux-saga": "^1.3.0",
-    "styled-components": "^6.1.19"
+    "styled-components": "^6.1.19",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -52,6 +58,7 @@
     "@react-native/typescript-config": "0.81.1",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.1.0",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^19.1.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
