--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "skillcart",
-  "version": "0.0.1",
-  "private": true,
+  "name": "assesskart",
+  "main": "index.ts",
+  "version": "1.0.0",
   "scripts": {
-    "android": "react-native run-android",
-    "build-web": "react-scripts build",
-    "ios": "react-native run-ios",
-    "lint": "eslint .",
-    "start": "react-native start",
-    "test": "jest",
-    "web": "react-scripts start"
+    "start": "expo start",
+    "reset-project": "node ./scripts/reset-project.js",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
+    "lint": "expo lint"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~5.0.4",
+    "@expo/vector-icons": "^14.1.0",
     "@react-native-vector-icons/material-design-icons": "^12.3.0",
     "@react-native-vector-icons/material-icons": "^12.3.0",
     "@react-native-vector-icons/octicons": "^20.3.0",
-    "@react-native/new-app-screen": "0.81.1",
     "@react-navigation/bottom-tabs": "^7.4.6",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.17",
@@ -23,62 +23,46 @@
     "@reduxjs/toolkit": "^2.8.2",
     "add": "^2.0.6",
     "axios": "^1.11.0",
-    "babel-plugin-module-resolver": "^5.0.2",
-    "lottie-ios": "4.5.0",
-    "lottie-react-native": "^7.3.2",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "react-native": "0.81.1",
+    "expo": "~53.0.22",
+    "expo-blur": "~14.1.5",
+    "expo-constants": "~17.1.7",
+    "expo-font": "~13.3.2",
+    "expo-haptics": "~14.1.4",
+    "expo-image": "~2.4.0",
+    "expo-linking": "~7.1.7",
+    "expo-splash-screen": "~0.30.10",
+    "expo-status-bar": "~2.2.3",
+    "expo-symbols": "~0.4.5",
+    "expo-system-ui": "~5.0.11",
+    "expo-web-browser": "~14.2.0",
+    "lottie-ios": "^4.5.1",
+    "lottie-react-native": "^7.3.3",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.6",
     "react-native-error-boundary": "^2.0.0",
     "react-native-fast-image": "^8.6.3",
-    "react-native-reanimated": "3.19.1",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "^5.6.1",
-    "react-native-screens": "^4.15.3",
+    "react-native-screens": "^4.15.4",
     "react-native-size-matters": "^0.4.2",
     "react-native-skeleton-placeholder": "^5.2.4",
     "react-native-vector-icons": "^10.3.0",
-    "react-native-web": "^0.21.1",
+    "react-native-web": "~0.20.0",
+    "react-native-webview": "13.13.5",
+    "react-native-worklets": "^0.4.2",
     "react-redux": "^9.2.0",
-    "react-scripts": "^5.0.1",
     "redux": "^5.0.1",
-    "redux-saga": "^1.3.0",
-    "styled-components": "^6.1.19",
-    "yarn": "^1.22.22"
+    "redux-saga": "^1.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@babel/preset-env": "^7.25.3",
-    "@babel/runtime": "^7.25.0",
-    "@react-native-community/cli": "20.0.0",
-    "@react-native-community/cli-platform-android": "20.0.0",
-    "@react-native-community/cli-platform-ios": "20.0.0",
-    "@react-native/babel-preset": "0.81.1",
-    "@react-native/eslint-config": "0.81.1",
-    "@react-native/metro-config": "0.81.1",
-    "@react-native/typescript-config": "0.81.1",
-    "@types/jest": "^29.5.13",
-    "@types/react": "^19.1.0",
-    "@types/react-native-vector-icons": "^6.4.18",
-    "@types/react-test-renderer": "^19.1.0",
-    "eslint": "^8.19.0",
-    "jest": "^29.6.3",
-    "prettier": "2.8.8",
-    "react-test-renderer": "19.1.0",
-    "typescript": "^5.8.3"
+    "@types/react": "~19.0.10",
+    "babel-plugin-module-resolver": "^5.0.2",
+    "eslint": "^9.25.0",
+    "eslint-config-expo": "~9.2.0",
+    "typescript": "~5.8.3"
   },
-  "engines": {
-    "node": ">=20"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  "private": true
 }
