--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "expo lint"
   },
@@ -21,7 +21,6 @@
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.25",
     "@reduxjs/toolkit": "^2.8.2",
-    "add": "^2.0.6",
     "axios": "^1.11.0",
     "expo": "~53.0.22",
     "expo-blur": "~14.1.5",
@@ -35,13 +34,12 @@
     "expo-symbols": "~0.4.5",
     "expo-system-ui": "~5.0.11",
     "expo-web-browser": "~14.2.0",
-    "lottie-ios": "^4.5.1",
+    "lottie-ios": "4.5.0",
     "lottie-react-native": "^7.3.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.6",
     "react-native-error-boundary": "^2.0.0",
-    "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "^5.6.1",
@@ -53,7 +51,6 @@
     "react-native-webview": "13.13.5",
     "react-native-worklets": "^0.4.2",
     "react-redux": "^9.2.0",
-    "redux": "^5.0.1",
     "redux-saga": "^1.3.0"
   },
   "devDependencies": {
