--- a/ios/SkillCart.xcodeproj/xcshareddata/xcschemes/SkillCart.xcscheme
+++ b/ios/SkillCart.xcodeproj/xcshareddata/xcschemes/SkillCart.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "AssessKart.app"
-               BlueprintName = "AssessKart"
-               ReferencedContainer = "container:AssessKart.xcodeproj">
+               BuildableName = "SkillCart.app"
+               BlueprintName = "SkillCart"
+               ReferencedContainer = "container:SkillCart.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "AssessKartTests.xctest"
-               BlueprintName = "AssessKartTests"
-               ReferencedContainer = "container:AssessKart.xcodeproj">
+               BuildableName = "SkillCartTests.xctest"
+               BlueprintName = "SkillCartTests"
+               ReferencedContainer = "container:SkillCart.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "AssessKart.app"
-            BlueprintName = "AssessKart"
-            ReferencedContainer = "container:AssessKart.xcodeproj">
+            BuildableName = "SkillCart.app"
+            BlueprintName = "SkillCart"
+            ReferencedContainer = "container:SkillCart.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "AssessKart.app"
-            BlueprintName = "AssessKart"
-            ReferencedContainer = "container:AssessKart.xcodeproj">
+            BuildableName = "SkillCart.app"
+            BlueprintName = "SkillCart"
+            ReferencedContainer = "container:SkillCart.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
