--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@expo/metro-runtime": "^5.0.4",
     "@expo/vector-icons": "^15.0.2",
     "@lottiefiles/dotlottie-react": "^0.15.2",
+    "@react-native-google-signin/google-signin": "^16.0.0",
     "@react-native-vector-icons/material-design-icons": "^12.3.0",
     "@react-native-vector-icons/material-icons": "^12.3.0",
     "@react-native-vector-icons/octicons": "^20.3.0",
