--- a/package.json
+++ b/package.json
@@ -45,8 +45,10 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.6",
+    "react-native-encrypted-storage": "^4.0.3",
     "react-native-error-boundary": "^2.0.0",
     "react-native-gesture-handler": "^2.28.0",
+    "react-native-keychain": "^10.0.0",
     "react-native-reanimated": "3.19.1",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.15.4",
