--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@expo/vector-icons": "^15.0.2",
     "@lottiefiles/dotlottie-react": "^0.15.2",
     "@react-native-community/cli": "^20.0.2",
+    "@react-native-community/netinfo": "^11.4.1",
     "@react-native-google-signin/google-signin": "^16.0.0",
     "@react-native-vector-icons/material-design-icons": "^12.3.0",
     "@react-native-vector-icons/material-icons": "^12.3.0",
@@ -49,6 +50,7 @@
     "react-native-error-boundary": "^2.0.0",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-keychain": "^10.0.0",
+    "react-native-modal": "^14.0.0-rc.1",
     "react-native-reanimated": "3.19.1",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.15.4",
